--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,15 @@
 <div class="row">
   <aside class="col-md-4">
     <section class="user_info">
-      <h1>
+      <h3>
         <%= gravatar_for @user %>
-        <%= @user.name %>
-      </h1>
+        <%= @user.name %></br>
+        <%= @user.email %></br>
+        <%= @user.location %></br>
+        </br></h3>
+      <p>
+        <%= @user.profile %>
+      </p>
     </section>
   </aside>
   <div class="col-md-8">
