--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,9 +4,10 @@
       <h1>
         <%= gravatar_for @user %>
         <%= @user.name %>
-        <div><%= link_to "Followings", followings_user_path(@user) %></div>
-        <div><%= link_to "Followers", followers_user_path(@user) %></div>
       </h1>
+      </br>
+        <span class="user"><%= link_to "Followings", followings_user_path(@user) %></span>
+        <span class="user"><%= link_to "Followers", followers_user_path(@user) %></span>
     </section>
   </aside>
   <div class="col-md-8">
@@ -17,7 +18,5 @@
         <%= render @microposts %>
       </ol>
     <% end %>
-    
-  
   </div>
 </div>
