--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,9 +3,9 @@
     <section class="user_info">
       <h3>
         <%= gravatar_for @user %>
-        <%= @user.name %></br>
-        <%= @user.location %></br>
-        </br></h3>
+        <%= @user.name %> (<%= @user.location %>)
+        </br>
+      </h3>
       <p>
         <%= @user.profile %>
       </p>
