--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,10 +2,29 @@
   <aside class="col-md-4">
     <section class="user_info">
       <h1>
-        <%= @user.name %>
+        <%= gravatar_for current_user %>
+        <%= current_user.name %> (<%= current_user.location %>)
+        </br>
+        </br>
+        <span class="user"><%= link_to "Followings", followings_user_path(current_user) %></span>
+        <span class="user"><%= link_to "Followers", followers_user_path(current_user) %></span>
       </h1>
+      <p>
+        <%= current_user.profile %>
+      </p>
     </section>
   </aside>
   <div class="col-md-8">
+    <%= will_paginate %>
+    <h3>All users</h3>
+      <ul class="users">
+        <% @users.each do |user| %>
+          <li>
+            <%= gravatar_for user, size: 50 %>
+            <%= link_to user.name, user %>
+          </li>
+        <% end %>
+      </ul>
+    <%= will_paginate %>
   </div>
 </div>
