--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
     <section class="user_info">
       <h1>
         <%= gravatar_for @user %>
-        <%= @user.name %> (<%= @user.location %>)
+        <%= @user.name %>
         </br>
         </br>
         <span class="user"><%= link_to "Followings", followings_user_path(@user) %></span>
